@@ -1,4 +1,4 @@
-#	$NetBSD: INSTALL,v 1.246 2004/07/28 12:34:02 jmmv Exp $
+#	$NetBSD: INSTALL,v 1.247 2004/07/29 22:29:35 jmmv Exp $
 #
 #	INSTALL - Installation kernel.
 #
@@ -168,6 +168,9 @@ options 	WSEMUL_VT100		# VT100 / VT220 emulation
 #options 	WS_KERNEL_BG=WSCOL_BLACK
 #options 	WS_KERNEL_COLATTR=""
 #options 	WS_KERNEL_MONOATTR=""
+# customization of console border color
+#options 	WSDISPLAY_CUSTOM_BORDER	# border customization from wsconsctl(8)
+#options 	WSDISPLAY_BORDER_COLOR=WSCOL_BLUE	# default color
 # compatibility to other console drivers
 #options 	WSDISPLAY_COMPAT_PCVT           # emulate some ioctls
 #options 	WSDISPLAY_COMPAT_SYSCONS        # emulate some ioctls
